--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "babel-loader": "^8.0.6",
     "lodash": "^4.17.15",
     "progressbar.js": "^1.1.0",
