--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "progressbar.js": "^1.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
